--- a/bookingapp/templates/bookingapp/base.html
+++ b/bookingapp/templates/bookingapp/base.html
@@ -16,7 +16,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'bookingapp:home' %}">Navbar</a>
+            <a class="navbar-brand" href="{% url 'bookingapp:home' %}">My Booking App</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="{% url 'bookingapp:booking_form' %}">Make a book</a>
                     <a class="nav-link" href="#">Pricing</a>
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                 </div>
@@ -34,7 +34,7 @@
 </header>
 <!-- Begin page content -->
 {% block content %}{% endblock %}
-ble ble ble
+
 
 <!-- Optional JavaScript; choose one of the two! -->
 
