--- a/templates/base.html
+++ b/templates/base.html
@@ -26,35 +26,24 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
                         <a class="nav-link" href="{% url 'bookingapp:new' %}">Make a book</a>
-                        <a class="nav-link" href="#">Pricing</a>
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </div>
-                </div>
-                <div class="collapse navbar-collapse" id="mainMenu">
-                    {% if user.is_authenticated %}
-                        <ul class="navbar-nav ml-auto">
+                        {% if user.is_authenticated %}
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown"
-                                   aria-haspopup="true" aria-expanded="false">
-                                    {{ user.username }}
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-                                    <a class="dropdown-item" href="#">My account</a>
-                                    <a class="dropdown-item" href="#">Change password</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
-                                </div>
+                                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown"
+                                   aria-expanded="false">{{ user.username }}</a>
+                                <ul class="dropdown-menu" aria-labelledby="dropdown01">
+                                    <li><a class="dropdown-item" href="#">My account</a></li>
+                                    <li><a class="dropdown-item" href="#">Change password</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'logout' %}">Log out</a></li>
+                                </ul>
                             </li>
-                        </ul>
-                    {% else %}
-                        {{ user.email }}
-                        <form class="form-inline ml-auto">
-                            <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
-                            <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
-                        </form>
-                    {% endif %}
+                        {% else %}
+                            <form class="form-inline ml-auto">
+                                <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+                                <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Sign up</a>
+                            </form>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         </nav>
