--- a/bookingapp/templates/bookingapp/booking_form.html
+++ b/bookingapp/templates/bookingapp/booking_form.html
@@ -3,8 +3,19 @@
 
 {% block content %}
     <h2>New Booking</h2>
-    <form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
-    </form>
+    <div class="container">
+        <div class="row">
+
+            <form method="POST" class="post-form">
+                <div class="col-6">
+                    {% csrf_token %}
+                    {% include 'includes/form.html' %}
+                </div>
+                <div class="col">
+                    <button type="submit" class="btn btn-outline-dark">Dark</button>
+                </div>
+            </form>
+
+        </div>
+    </div>
 {% endblock %}
