--- a/bookingapp/templates/bookingapp/booking_form.html
+++ b/bookingapp/templates/bookingapp/booking_form.html
@@ -2,19 +2,22 @@
 
 
 {% block content %}
-    <h2>New Booking</h2>
     <div class="container">
-        <div class="row">
-
-            <form method="POST" class="post-form">
-                <div class="col-6">
-                    {% csrf_token %}
-                    {% include 'includes/form.html' %}
+        <div class="col align-self-center">
+            <div class="card">
+                <div class="card-header">
+                    <h2>New Booking</h2>
                 </div>
-                <div class="col">
-                    <button type="submit" class="btn btn-outline-dark">Dark</button>
-                </div>
-            </form>
+                <form method="POST" class="post-form">
+                    <div class="card-body">
+                        {% csrf_token %}
+                        {% include 'includes/form.html' %}
+                    </div>
+                    <div class="card-footer">
+                        <button type="submit" class="btn btn-outline-dark">Dark</button>
+                    </div>
+                </form>
+            </div>
 
         </div>
     </div>
