--- a/accounts/templates/accounts/password_change.html
+++ b/accounts/templates/accounts/password_change.html
@@ -12,7 +12,7 @@
             <form method="post" novalidate>
                 {% csrf_token %}
                 {% include 'includes/form.html' %}
-                <button type="submit" class="btn btn-success">Change password</button>
+                <button type="submit" class="btn btn-outline-dark">Change password</button>
             </form>
         </div>
     </div>
