Welcome message, change password link

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
         <div class="starter-template text-center py-5 px-3">
             <h1>My Booking App</h1>
             <p class="lead">
-                Welcome to <b>My Booking App website</b>, a site to prctice some Django framework concepts.
+                Welcome to <b>My Booking App</b> website, a site to practice some Django framework concepts.
                 <br>
                 Please log in and make a book
             </p>
