--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                                    aria-expanded="false">{{ user.username }}</a>
                                 <ul class="dropdown-menu" aria-labelledby="dropdown01">
                                     <li><a class="dropdown-item" href="#">My account</a></li>
-                                    <li><a class="dropdown-item" href="#">Change password</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'password_change' %}">Change password</a></li>
                                     <li><a class="dropdown-item" href="{% url 'logout' %}">Log out</a></li>
                                 </ul>
                             </li>
