button style to primary

--- a/bookingapp/templates/bookingapp/booking_form.html
+++ b/bookingapp/templates/bookingapp/booking_form.html
@@ -14,7 +14,7 @@
                         {% include 'includes/form.html' %}
                     </div>
                     <div class="card-footer">
-                        <button type="submit" class="btn btn-outline-dark">Dark</button>
+                        <button type="submit" class="btn btn-outline-primary">Book</button>
                     </div>
                 </form>
             </div>
