--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -9,7 +9,7 @@
                     <form method="post" novalidate>
                         {% csrf_token %}
                         {% include 'includes/form.html' %}
-                        <button type="submit" class="btn btn-outline-dark">Log in</button>
+                        <button type="submit" class="btn btn-outline-primary">Log in</button>
                     </form>
                 </div>
                 <div class="card-footer text-muted text-center">
