--- a/accounts/templates/accounts/password_reset.html
+++ b/accounts/templates/accounts/password_reset.html
@@ -13,7 +13,7 @@
                     <form method="post" novalidate>
                         {% csrf_token %}
                         {% include 'includes/form.html' %}
-                        <button type="submit" class="btn btn-outline-dark">Send password reset email</button>
+                        <button type="submit" class="btn btn-outline-primary">Send password reset email</button>
                     </form>
                 </div>
             </div>
