--- a/accounts/templates/accounts/password_reset_confirm.html
+++ b/accounts/templates/accounts/password_reset_confirm.html
@@ -18,7 +18,7 @@
                         <form method="post" novalidate>
                             {% csrf_token %}
                             {% include 'includes/form.html' %}
-                            <button type="submit" class="btn btn-outline-dark">Change password</button>
+                            <button type="submit" class="btn btn-outline-primary">Change password</button>
                         </form>
                     {% else %}
                         <h3 class="card-title">Reset your password</h3>
