--- a/bookingapp/templates/bookingapp/booking_form.html
+++ b/bookingapp/templates/bookingapp/booking_form.html
@@ -2,11 +2,13 @@
 
 
 {% block content %}
+    <br>
     <div class="container">
-        <div class="col align-self-center">
+        <div class="row justify-content-md-center">
+            <div class="col-lg-auto">
             <div class="card">
                 <div class="card-header">
-                    <h2>New Booking</h2>
+                    <h2>Booking Form</h2>
                 </div>
                 <form method="POST" class="post-form">
                     <div class="card-body">
@@ -15,10 +17,12 @@
                     </div>
                     <div class="card-footer">
                         <button type="submit" class="btn btn-outline-primary">Book</button>
+                        <a class="btn btn-outline-danger" href="{% url 'bookingapp:index' %}">Cancel</a>
                     </div>
                 </form>
             </div>
 
+        </div>
         </div>
     </div>
 {% endblock %}
