--- a/templates/base.html
+++ b/templates/base.html
@@ -26,14 +26,16 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link" href="{% url 'bookingapp:new' %}">Make a book</a>
                         {% if user.is_authenticated %}
+                            <a class="nav-link" href="{% url 'bookingapp:index' %}">My Bookings</a>
+                            <a class="nav-link" href="{% url 'bookingapp:new' %}">Make a book</a>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown"
                                    aria-expanded="false">{{ user.username }}</a>
                                 <ul class="dropdown-menu" aria-labelledby="dropdown01">
                                     <li><a class="dropdown-item" href="#">My account</a></li>
-                                    <li><a class="dropdown-item" href="{% url 'password_change' %}">Change password</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
+                                    </li>
                                     <li><a class="dropdown-item" href="{% url 'logout' %}">Log out</a></li>
                                 </ul>
                             </li>
@@ -51,9 +53,14 @@
     <!-- Begin page content -->
     {% block content %}{% endblock %}
 
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
+    <script>
+        $(document).ready(function () {
+            {% block jquery %}{% endblock %}
+        })
+    </script>
     </body>
 {% endblock body %}
 </body>
