--- a/bookingapp/templates/bookingapp/booking_form.html
+++ b/bookingapp/templates/bookingapp/booking_form.html
@@ -1,10 +1,28 @@
-{% extends 'bookingapp/base.html' %}
+{% extends 'base.html' %}
 
 
 {% block content %}
-    <h2>New Booking</h2>
-    <form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
-    </form>
+    <br>
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col-lg-auto">
+            <div class="card">
+                <div class="card-header">
+                    <h2>Booking Form</h2>
+                </div>
+                <form method="POST" class="post-form">
+                    <div class="card-body">
+                        {% csrf_token %}
+                        {% include 'includes/form.html' %}
+                    </div>
+                    <div class="card-footer">
+                        <button type="submit" class="btn btn-outline-primary">Book</button>
+                        <a class="btn btn-outline-danger" href="{% url 'bookingapp:index' %}">Cancel</a>
+                    </div>
+                </form>
+            </div>
+
+        </div>
+        </div>
+    </div>
 {% endblock %}
